--- a/main.css
+++ b/main.css
@@ -5,11 +5,13 @@
   --on-primary: #ffffff;
   --background-surface: #fffefb;
   --secondary-background: #f7f9fa;
+  --main-color: rgb(5, 5, 5);
 }
 
 body {
   background: var(--background-surface);
   font-family: 'Poppins', "Open Sans", sans-serif;
+  color: var(--main-color);
 }
 
 .app-container {
@@ -43,8 +45,10 @@ body {
 }
 
 .hero-img img {
+  width: 15rem;
   border-radius: 5rem;
   margin: auto;
+  filter: grayscale();
 }
 
 .main-paragraph {
@@ -111,12 +115,14 @@ body {
 
 .story {
   background: var(--secondary-background);
-  padding: 1.5em .5em;
+  padding: 1.5rem .5rem;
+  border-radius: 1.5rem;
   margin: 2rem 0;
 }
 
 .content p {
   line-height: 2;
+  max-width: 80ch;
 }
 
 ul.pills {
@@ -149,20 +155,45 @@ ul.pills {
   display: block;
 }
 
+.contacts {
+  color: var(--primary);
+}
+
+ul.contacts {
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+.contacts a{
+  color: inherit;
+}
+
 @media only screen and (min-width: 1200px) {
   .app-container {
     margin: 0 9rem;
   }
+
   .main-paragraph {
     margin-left: 0.8rem;
   }
+
+  .hero-img img {
+    width: 18rem;
+  }
+
   .hero {
     font-size: 2em;
     padding: 1em;
   }
+
   .card {
     min-height: 30rem;
   }
+
   .story {
     padding: 1.5rem;
   }
