--- a/public/main.css
+++ b/public/main.css
@@ -313,6 +313,7 @@ ul.contacts {
   opacity: 0;
   transition: all .3s;
   box-shadow: 0 0 5px rgba(0,0,0,70%);
+  z-index: 5;
 }
 
 .toast-container.show {
