--- a/public/main.css
+++ b/public/main.css
@@ -46,6 +46,7 @@ body {
 
 .app-container {
   margin: 0 1rem;
+  max-width: 1600px;
 }
 
 header {
@@ -350,6 +351,12 @@ footer {
   .story {
     padding: 1.5rem;
   }
+}
+
+@media only screen and (min-width: 1600px) {
+  .app-container {
+    margin: 0 auto;
+}
 }
 
 /*@media (prefers-color-scheme: dark) {
