--- a/public/main.css
+++ b/public/main.css
@@ -158,6 +158,8 @@ header ul.control-group {
   flex-flow: row wrap;
   justify-content: center;
   gap: 2rem;
+  margin-left: -2rem;
+  margin-right: -2rem;
 }
 
 .card {
